--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "description": "This is a PDF parser and process content from PDF and return as JSON",
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.3",
     "cohere-ai": "^7.13.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
